Custom ETREE for testing  branches and forks in KLEE

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -19,6 +19,7 @@ klee_add_component(kleeCore
   ImpliedValue.cpp
   Memory.cpp
   MemoryManager.cpp
+  ETree.cpp
   PTree.cpp
   Searcher.cpp
   SeedInfo.cpp
