Class for new Probabilistic States

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -27,6 +27,7 @@ klee_add_component(kleeCore
   StatsTracker.cpp
   TimingSolver.cpp
   UserSearcher.cpp
+  ProbExecState.cpp
 )
 
 # TODO: Work out what the correct LLVM components are for
