Refinement for KQUERY Dump by path and state.getID()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -119,6 +119,7 @@ endif()
 # Concrete tests build system
 ###############################################################################
 add_subdirectory(Concrete)
+add_subdirectory(PSE_Programs)
 
 ###############################################################################
 # Configure lit test suite
