renaming 'libcxx' -> 'libc++'

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -196,7 +196,7 @@ if config.enable_uclibc:
 if config.enable_posix_runtime:
   config.available_features.add('posix-runtime')
 
-# LibC++ runtime feature
+# libc++ runtime feature
 if config.enable_libcxx:
   config.available_features.add('libcxx')
 
