--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -208,7 +208,7 @@ if config.enable_floating_point:
 if config.enable_fp_runtime:
    config.available_features.add('fp-runtime')
 
-# LibC++ runtime feature
+# libc++ runtime feature
 if config.enable_libcxx:
   config.available_features.add('libcxx')
 
