CI: Disable fail-fast strategy for GitHub Actions
If some job in the matrix fails, all the remaing jobs will be cancelled which
is quite inconvenient for checks in PRs like #1389.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,7 @@ jobs:
   Linux:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         name: [
                 "LLVM 11",
