--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -35,21 +35,21 @@ klee_src_root = getattr(config, 'klee_src_root', None)
 if klee_obj_root is not None:
   config.test_exec_root = os.path.join(klee_obj_root, 'test')
 
-# Tweak the PATH to include the tool dir.
-if klee_obj_root is not None:
+  # Check KLEE tools directory
   klee_tools_dir = getattr(config, 'klee_tools_dir', None)
   if not klee_tools_dir:
     lit_config.fatal('No KLEE tools dir set!')
 
-  # Check LLVM tool directory
+  # Check LLVM tools directory
   llvm_tools_dir = getattr(config, 'llvm_tools_dir', None)
   if not llvm_tools_dir:
-    lit_config.fatal('No LLVM tool directory set!')
+    lit_config.fatal('No LLVM tools directory set!')
 
+  # Add LLVM tools and FileCheck with not to PATH
   path = os.path.pathsep.join(
     (
+      os.path.join(klee_tools_dir, "testtools"),
       llvm_tools_dir,
-      klee_tools_dir,
       config.environment['PATH']
     )
   )
