tests: Do not add klee tools to PATH in lit
It may happen that some older instance of klee is already present
in PATH.  All tests that call plain klee instead of %klee may use
it and then unexpectedly fail.

This commit will make all tests that rely on klee tools being
explicitly in PATH fail in our CI.  From now on, only LLVM tools,
FileCheck and not will be in lit's PATH.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -90,6 +90,9 @@ if (NOT EXISTS "${LLVM_TOOLS_BINARY_DIR}/not")
   set(DOWNLOAD_NOT_SOURCE TRUE)
 endif()
 
+# Do not build FileCheck and not to ${KLEE_TOOLS_DIR} as it will not be in lit's PATH.
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${KLEE_TOOLS_DIR}/testtools)
+
 if (DOWNLOAD_FILECHECK_SOURCE)
   if (${LLVM_VERSION_MAJOR} GREATER 3)
     set(FILECHECK_SRC_URL "https://raw.githubusercontent.com/llvm/llvm-project/release/${LLVM_VERSION_MAJOR}.x/llvm/utils/FileCheck/FileCheck.cpp")
