KLEE floating-point support.
The implementation is based on KLEE-float.

Supported llvm math intrinsic functions related to floating-point.

Added ENABLE_FP and FP_RUNTIME options to CMake.

Provided an ability to switch between Z3Builder implementations.

Building KLEE without -DCMAKE_ENABLE_FLOATING_POINT does not change the core.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ Debug/
 Debug+Asserts/
 Output/
 
+.idea
 # commonly used as cmake build directory
 /build
-
+cmake-build-debug
+cmake-build-release
 cscope.*
 *~
 
