Implement lazy initialization

--- a/runtime/Runtest/CMakeLists.txt
+++ b/runtime/Runtest/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(kleeRuntest SHARED
   intrinsics.c
   # HACK:
   ${CMAKE_SOURCE_DIR}/lib/Basic/KTest.cpp
+  ${CMAKE_SOURCE_DIR}/lib/ADT/TestCase.cpp
 )
 # Increment version appropriately if ABI/API changes, more details:
 # http://tldp.org/HOWTO/Program-Library-HOWTO/shared-libraries.html#AEN135
