--- a/tools/klee-replay/CMakeLists.txt
+++ b/tools/klee-replay/CMakeLists.txt
@@ -14,7 +14,7 @@ if (HAVE_PTY_H OR HAVE_UTIL_H OR HAVE_LIBUTIL_H)
     klee_init_env.c
   )
 
-  target_link_libraries(klee-replay PRIVATE kleeBasic)
+  target_link_libraries(klee-replay PRIVATE kleeBasic kleeADT)
 
   if(LIBCAP_LIBRARIES)
     target_link_libraries(klee-replay PRIVATE ${LIBCAP_LIBRARIES})
