Test failure for WSL 1
(cherry picked from commit df04aeadefb4e1c34c7ef8b9123947ff045a34d9)

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -229,6 +229,14 @@ for target in supported_targets:
     config.available_features.add(target)
   else:
     config.available_features.add('not-{}'.format(target))
+if 'WSL_DISTRO_NAME' in os.environ and 'WSL_INTEROP' not in os.environ:
+  config.available_features.add('wsl-1')
+else:
+  config.available_features.add('not-wsl-1')
+if 'WSL_DISTRO_NAME' in os.environ and 'WSL_INTEROP' in os.environ:
+  config.available_features.add('wsl-2')
+else:
+  config.available_features.add('not-wsl-2')
 
 # Sanitizer
 config.available_features.add('{}asan'.format('' if config.have_asan else 'not-'))
