test: add feature whether -m32 is supported

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -205,6 +205,10 @@ if config.enable_libcxx:
 if config.enable_eh_cxx:
   config.available_features.add('eh-cxx')
 
+# Compiler supports -m32
+if config.have_m32:
+  config.available_features.add('m32')
+
 # Target operating system features
 supported_targets = ['linux', 'darwin', 'freebsd']
 for target in supported_targets:
