--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     ###########################################################################
 
     # Check a subset of the matrix of:
-    #   LLVM  : {3.8, 3.9, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0}
+    #   LLVM  : {3.8, 3.9, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0}
     #   SOLVERS : {Z3, STP, STP:Z3, metaSMT}
     #   STP_VERSION   : {2.3.3, master}
     #   METASMT_VERSION : {v4.rc1}
@@ -53,6 +53,9 @@ env:
 jobs:
     include:
     # Check supported LLVM versions
+    - name: "LLVM 13"
+      env: LLVM_VERSION=13.0
+
     - name: "LLVM 12"
       env: LLVM_VERSION=12.0
 
