--- a/test/lit.site.cfg.in
+++ b/test/lit.site.cfg.in
@@ -24,9 +24,7 @@ config.cxx = "@NATIVE_CXX@"
 
 # NOTE: any changes to compiler flags also have to be applied to
 #       test/Concrete/CMakeLists.txt
-config.O0opt = "-O0"
-if @LLVM_VERSION_MAJOR@ >= 5:
-  config.O0opt += " -Xclang -disable-O0-optnone"
+config.O0opt = "-O0 -Xclang -disable-O0-optnone"
 
 # Features
 config.enable_uclibc = True if @SUPPORT_KLEE_UCLIBC@ == 1 else False
