--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -90,7 +90,8 @@ if config.test_exec_root is None:
 
 
 # Add substitutions from lit.site.cfg
-subs = [ 'clangxx', 'clang', 'cc', 'cxx', 'O0opt' ]
+subs = [ 'clangxx', 'clang', 'cc', 'cxx', 'O0opt', 'c_prefixes_10', 'cpp_prefixes_10', 'c_prefixes_8', 'c_prefixes_6',
+         'undefined_sanitizer']
 for name in subs:
   value = getattr(config, name, None)
   if value == None:
@@ -163,7 +164,7 @@ config.substitutions.append(
 
 # Add feature for the LLVM version in use, so it can be tested in REQUIRES and
 # XFAIL checks. We also add "not-XXX" variants, for the same reason.
-known_llvm_versions = set(["3.8", "3.9", "4.0", "5.0", "6.0", "7.0", "7.1", "8.0", "9.0", "10.0", "11.0"])
+known_llvm_versions = set(["5.0", "6.0", "7.0", "7.1", "8.0", "9.0", "10.0", "11.0"])
 current_llvm_version_tuple = (int(config.llvm_version_major), int(config.llvm_version_minor))
 current_llvm_version = "%s.%s" % current_llvm_version_tuple
 
