Updated tests to use ktest-gen instead of gen-bout

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -136,7 +136,7 @@ subs = [ ('%kleaver', 'kleaver', kleaver_extra_params),
          ('%klee','klee', klee_extra_params),
          ('%ktest-tool', 'ktest-tool', ''),
          ('%gen-random-bout', 'gen-random-bout', ''),
-         ('%gen-bout', 'gen-bout', '')
+         ('%ktest-gen', 'ktest-gen', '')
 ]
 for s,basename,extra_args in subs:
   config.substitutions.append(
