--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -151,7 +151,7 @@ file(GENERATE
 
 add_custom_target(systemtests
   COMMAND "${LIT_TOOL}" ${LIT_ARGS} "${CMAKE_CURRENT_BINARY_DIR}"
-  DEPENDS klee kleaver klee-replay kleeRuntest gen-bout gen-random-bout
+  DEPENDS klee kleaver klee-replay kleeRuntest ktest-gen gen-random-bout
   COMMENT "Running system tests"
   USES_TERMINAL
 )
