Updated tests to use ktest-randgen instead of gen-random-bout

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -135,7 +135,7 @@ subs = [ ('%kleaver', 'kleaver', kleaver_extra_params),
          ('%klee-zesti', 'klee-zesti', ''),
          ('%klee','klee', klee_extra_params),
          ('%ktest-tool', 'ktest-tool', ''),
-         ('%gen-random-bout', 'gen-random-bout', ''),
+         ('%ktest-randgen', 'ktest-randgen', ''),
          ('%ktest-gen', 'ktest-gen', '')
 ]
 for s,basename,extra_args in subs:
