tests: invoke LLVM tools through their corresponding macros

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -103,6 +103,10 @@ config.substitutions.append(
 config.substitutions.append(
   ('%llvmar', os.path.join(llvm_tools_dir, 'llvm-ar'))
 )
+# Add a substitution for llvm-link
+config.substitutions.append(
+  ('%llvmlink', os.path.join(llvm_tools_dir, 'llvm-link'))
+)
 
 # Add a substition for libkleeruntest
 config.substitutions.append(
