Have the STP coverage build also provide Z3, so that the crosscheck solver can also be tested

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -162,7 +162,7 @@ jobs:
         include:
           - name: "STP"
             env:
-              SOLVERS: STP
+              SOLVERS: STP:Z3
           - name: "Z3"
             env:
               SOLVERS: Z3
