--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -172,6 +172,11 @@ jobs:
     steps:
       - name: Checkout KLEE source code
         uses: actions/checkout@v3
+        with:
+          # Codecov may run into "Issue detecting commit SHA. Please run
+          # actions/checkout with fetch-depth > 1 or set to 0" when uploading.
+          # See also https://github.com/codecov/codecov-action/issues/190
+          fetch-depth: 2
       - name: Build KLEE
         env: ${{ matrix.env }}
         run: scripts/build/build.sh klee --docker --create-final-image
