Implemented classes for types in type system. Added handling TypeManager entity, that can create such these KType's.

--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -16,6 +16,7 @@ set(KLEE_MODULE_COMPONENT_SRCS
   IntrinsicCleaner.cpp
   KInstruction.cpp
   KModule.cpp
+  KType.cpp
   LowerSwitch.cpp
   ModuleUtil.cpp
   Optimize.cpp
