Added type system support for C and (partially) C++ languages.

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -12,6 +12,7 @@ klee_add_component(kleeCore
   CallPathManager.cpp
   Context.cpp
   CoreStats.cpp
+  CXXTypeSystem/CXXTypeManager.cpp
   ExecutionState.cpp
   Executor.cpp
   ExecutorUtil.cpp
