[test] Show elapsed wall time for each test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -740,7 +740,7 @@ if (ENABLE_UNIT_TESTS OR ENABLE_SYSTEM_TESTS)
   )
 
   set(LIT_ARGS
-    "-v;-s"
+    "-v;-s;--time-tests"
     CACHE
     STRING
     "Lit arguments"
