[feat] Add GuidedSearcher

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -24,6 +24,7 @@ klee_add_component(kleeCore
   SeedInfo.cpp
   SpecialFunctionHandler.cpp
   StatsTracker.cpp
+  Target.cpp
   TimingSolver.cpp
   UserSearcher.cpp
 )
