--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -7,7 +7,9 @@
 #
 #===------------------------------------------------------------------------===#
 set(KLEE_MODULE_COMPONENT_SRCS
+  CallSplitter.cpp
   Checks.cpp
+  CodeGraphDistance.cpp
   FunctionAlias.cpp
   InstructionInfoTable.cpp
   InstructionOperandTypeCheckPass.cpp
@@ -20,6 +22,7 @@ set(KLEE_MODULE_COMPONENT_SRCS
   OptNone.cpp
   PhiCleaner.cpp
   RaiseAsm.cpp
+  ReturnSplitter.cpp
 )
 
 if (USE_WORKAROUND_LLVM_PR39177)
