[feat] Add concretization manager and solver
[feat] Add LI object addresses concretizations

--- a/lib/Solver/CMakeLists.txt
+++ b/lib/Solver/CMakeLists.txt
@@ -12,9 +12,11 @@ klee_add_component(kleaverSolver
   CexCachingSolver.cpp
   ConstantDivision.cpp
   ConstructSolverChain.cpp
+  ConcretizationManager.cpp
   CoreSolver.cpp
   DummySolver.cpp
   FastCexSolver.cpp
+  ConcretizingSolver.cpp
   IncompleteSolver.cpp
   IndependentSolver.cpp
   MetaSMTSolver.cpp
